@@ -1,3 +1,8 @@
+2024-10-07  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/devol.cpp (devol): Switch three integer vectors from
+	arma::icolvec to std::vector<int32_t> for ARMA_64BIT_WORD compilation
+
 2024-03-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
